--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             </ul>
                         </div>
                     </div>
-                    <img src="assets/img/zola.jpg" alt="Zola" class="home-img">
+                    <img src="https://unsplash.com/pt-br/fotografias/yLcK3Itx6ok" alt="Zola" class="home-img">
                 </div>
             </div>
         </section>
@@ -222,7 +222,7 @@
 
                     <!--========== project 1 ============-->
                     <div class="portfolio__card">
-                        <img src="assets/img/portfolio1.jpg" alt="Project title" class="portfolio__image">
+                        <img src="https://unsplash.com/pt-br/fotografias/hGV2TfOh0ns" alt="Project title" class="portfolio__image">
                         <span class="portfolio__category">Front-end Developer</span>
                         <h3 class="portfolio__title">Write the name of the completed project here.</h3>
                         <a href="#" class="btn btn--primary">
@@ -232,7 +232,7 @@
                     </div>
                     <!--========== project 2 ============-->
                     <div class="portfolio__card">
-                        <img src="assets/img/portfolio2.jpg" alt="Project title" class="portfolio__image">
+                        <img src="https://unsplash.com/pt-br/fotografias/DtDlVpy-vvQ" alt="Project title" class="portfolio__image">
                         <span class="portfolio__category">Website project</span>
                         <h3 class="portfolio__title">Write the name of the completed project here.</h3>
                         <a href="#" class="btn btn--primary">
@@ -242,7 +242,7 @@
                     </div>
                     <!--========== project 3 ============-->
                     <div class="portfolio__card">
-                        <img src="assets/img/portfolio3.jpg" alt="Project title" class="portfolio__image">
+                        <img src="https://unsplash.com/pt-br/fotografias/KE0nC8-58MQ" alt="Project title" class="portfolio__image">
                         <span class="portfolio__category">Website Project</span>
                         <h3 class="portfolio__title">Write the name of the completed project here.</h3>
                         <a href="#" class="btn btn--primary">
@@ -291,38 +291,38 @@
 
                  <!--========= testimonial 1 ============-->
                         <div class="grid testimonial__item swiper-slide">
-                            <img src="https://cdn.pixabay.com/photo/2023/01/10/20/04/ai-generated-7710456__340.jpg" alt="Robot" class="testimonial__image">
+                            <img src="https://cdn.pixabay.com/photo/2023/01/10/20/04/ai-generated-7710456__340.jpg" alt="Robot1" class="testimonial__image">
                             <div class="testimonial__body">
                                 <div class="testimonial__icon">
                                     <i class="bx bxs-quote-alt-left"></i>
                                 </div>
                                 <p class="testimonial__quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus eos ipsam repellat? Officiis perspiciatis perferendis vero saepe!</p>
-                                <p class="testimonial__name">Robot</p>
+                                <p class="testimonial__name">Robot1</p>
                                 <span class="testimonial__occupation">IA</span>
                             </div>
                         </div>
 
                   <!--========= testimonial 2 ============-->
                         <div class="grid testimonial__item swiper-slide">
-                            <img src="assets/img/ladybugs.jpg" alt="Ladybugs" class="testimonial__image">
+                            <img src="https://unsplash.com/pt-br/fotografias/TzvMJ6G0ink" alt="Robot2" class="testimonial__image">
                             <div class="testimonial__body">
                                 <div class="testimonial__icon">
                                     <i class="bx bxs-quote-alt-left"></i>
                                 </div>
                                 <p class="testimonial__quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus eos ipsam repellat? Officiis perspiciatis perferendis vero saepe!</p>
-                                <p class="testimonial__name">Ladybugs</p>
+                                <p class="testimonial__name">Robot2</p>
                                 <span class="testimonial__occupation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse qui, porro voluptatem similique eveniet nisi voluptas accusamus molestiae ratione doloremque, fugit illum.</span>
                             </div>
                         </div>
                     <!--========= testimonial 3 ============-->
                         <div class="grid testimonial__item swiper-slide">
-                            <img src="assets/img/pássaro.jpg" alt="Pássaro" class="testimonial__image">
+                            <img src="https://unsplash.com/pt-br/fotografias/kHqbPFRCmf0" alt="Groot" class="testimonial__image">
                             <div class="testimonial__body">
                                 <div class="testimonial__icon">
                                     <i class="bx bxs-quote-alt-left"></i>
                                 </div>
                                 <p class="testimonial__quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus eos ipsam repellat? Officiis perspiciatis perferendis vero saepe!</p>
-                                <p class="testimonial__name">Pássaro</p>
+                                <p class="testimonial__name">Groot</p>
                                 <span class="testimonial__occupation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse qui, porro voluptatem similique eveniet nisi voluptas accusamus molestiae ratione doloremque, fugit illum.</span>
                             </div>
                         </div>
