--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <!--========== BOXICONS ===========-->
     <link rel="stylesheet" href="assets/css/boxicons/css/boxicons.min.css">
 
-    <!--========== SWIPER CSS ===========
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min. css">-->
+    <!--========== SWIPER CSS ===========-->
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min. css">
 
     <!--========== MAIN CSS ===========-->
+    <!--<link rel="stylesheet" href="assets/css/main.css">-->
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
@@ -56,7 +57,7 @@
                     </div>
                 </div>
                 <div class="nav__open" id="nav-open">
-                    <i class="bx bx-menu-alt-right"></i>
+                    <i class="bx bx-menu"></i>
                 </div>
             </nav>
         </div>
@@ -102,12 +103,12 @@
                             </ul>
                         </div>
                     </div>
-                    <img src="https://unsplash.com/pt-br/fotografias/yLcK3Itx6ok" alt="Zola" class="home-img">
+                    <img src="https://lh3.googleusercontent.com/_auCnF2bjvN806TGPn7lBtDlTY7WWK0NH030hvvHNaZrNrgQ2MSrIJze_S9SRkS5yKh1h2KeuzpgiYvb_gDfomA1ewXGmRIvnwFZH3555BsyKaB9LksNcsF2RcCgd8sDtdjdFn_RMzEag4uFjSxEk29hklH4xp_1ZkRHc9Oq5r9kov5EG8y9uoQB3W72q_uPW9HxCrHPxgJ48Sq2Svye9_hSogdKsjDdKx4dSBjwaa0oD2GWmHPADBgx6Ecsbd9mRpuYUkcPF7HAQJO5Q_6S3DOWn3_HGpn1V3kDKwtp8Sfmn4FWChsezOBusr8SVIj9IGlPsiQIpRq2maRA-nhuI-HJLkIyQzMJhJv3y_dwjL0EurpkAmhpIPH3EVjmc9r_pb3ViuKJUmNd4bPiFTqgYUB4cLGEKOKKX6xlR7bZJ6ZmBTM2c1htkOGg-a02x0DhFJmyCS_THTd21neZ4G-9CYAq1qVb0LJ7MYS1Re18OrTPZcguzbLXXQGXGA1pem1Tm73kbi9O2MCu_xza_xgTK8yB2xGv_oxsHDatOqdrgqphpeboarThzBRUI0MHwTf35oQLAW2b9o7k8jmeI6LAQcKhYj67L8RoGgWIYMSdH7wdMTF-2NGrcmXNvl2SGVec1Wk6LQOCTCu2k3iv8JU05UUL8oUVd60becZAWnTJNGMDdMC0wcriYDs3PWs5r4EiPQXMARm6Zd2BOFLd9h3GI5GL8u1U0EQd59T9uhEf0P1jmvTPu_r4xwLp9VGbbwydhdy_iRPUo78qiOWlrhIJ8nD78RBOh0LqU9Zhb2M_rA12JmPMF7Dj551to98z48dW8qdTh5PuXv_RQjEJ-iJyiQ7kpxaadcSHs60VSLSZKi_b5C6AnHgclYUCWXZaDEyUWB_thRtJKpbuWiXIyXRzfllvOGjayCRYRREAW5ucaWc=s460-no?authuser=0" alt="Zola" class="home-img">
                 </div>
             </div>
         </section>
 
-        <!--==================  ABOUT SECTION ====================-->
+        <!--==================  ABOUT SECTION ==================-->
         <section id="about" class="about section">
             <div class="container">
                 <div class="section__header">
@@ -163,7 +164,7 @@
             </div>
         </section>
 
-        <!--==================  SERVICES SECTION ====================-->
+        <!--==================  SERVICES SECTION ==================-->
         <section id="services" class="services section">
             <div class="container">
                 <div class="section__header">
@@ -209,7 +210,7 @@
             </div>
         </section>
 
-        <!--==================  PORTFOLIO SECTION ====================-->
+        <!--==================  PORTFOLIO SECTION =================-->
         <section id="portfolio" class="portfolio section">
             <div class="container">
                 <div class="section__header">
@@ -222,7 +223,7 @@
 
                     <!--========== project 1 ============-->
                     <div class="portfolio__card">
-                        <img src="https://unsplash.com/pt-br/fotografias/hGV2TfOh0ns" alt="Project title" class="portfolio__image">
+                        <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Project title" class="portfolio__image">
                         <span class="portfolio__category">Front-end Developer</span>
                         <h3 class="portfolio__title">Write the name of the completed project here.</h3>
                         <a href="#" class="btn btn--primary">
@@ -232,7 +233,7 @@
                     </div>
                     <!--========== project 2 ============-->
                     <div class="portfolio__card">
-                        <img src="https://unsplash.com/pt-br/fotografias/DtDlVpy-vvQ" alt="Project title" class="portfolio__image">
+                        <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80" alt="Project title" class="portfolio__image">
                         <span class="portfolio__category">Website project</span>
                         <h3 class="portfolio__title">Write the name of the completed project here.</h3>
                         <a href="#" class="btn btn--primary">
@@ -242,7 +243,7 @@
                     </div>
                     <!--========== project 3 ============-->
                     <div class="portfolio__card">
-                        <img src="https://unsplash.com/pt-br/fotografias/KE0nC8-58MQ" alt="Project title" class="portfolio__image">
+                        <img src="https://images.unsplash.com/photo-1483058712412-4245e9b90334?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Project title" class="portfolio__image">
                         <span class="portfolio__category">Website Project</span>
                         <h3 class="portfolio__title">Write the name of the completed project here.</h3>
                         <a href="#" class="btn btn--primary">
@@ -277,7 +278,7 @@
             </div>
         </section>
 
-        <!--============  TESTIMONIALS SECTION ===============-->
+        <!--============  TESTIMONIALS SECTION ===============
         <section id="testimonials" class="testimonials section">
             <div class="container">
                 <div class="section__header">
@@ -287,42 +288,42 @@
                     </p>
                 </div>
                 <div class="grid testimonial__wrapper swiper">
-                    <div class="swiper-wrapper">
+                    <div class="swiper-wrapper">-->
 
-                 <!--========= testimonial 1 ============-->
+                 <!--========= testimonial 1 ============
                         <div class="grid testimonial__item swiper-slide">
-                            <img src="https://cdn.pixabay.com/photo/2023/01/10/20/04/ai-generated-7710456__340.jpg" alt="Robot1" class="testimonial__image">
+                            <img src="https://cdn.pixabay.com/photo/2023/01/10/20/04/ai-generated-7710456__340.jpg" alt="Robot" class="testimonial__image">
                             <div class="testimonial__body">
                                 <div class="testimonial__icon">
                                     <i class="bx bxs-quote-alt-left"></i>
                                 </div>
                                 <p class="testimonial__quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus eos ipsam repellat? Officiis perspiciatis perferendis vero saepe!</p>
-                                <p class="testimonial__name">Robot1</p>
+                                <p class="testimonial__name">Robot</p>
                                 <span class="testimonial__occupation">IA</span>
                             </div>
-                        </div>
+                        </div>-->
 
-                  <!--========= testimonial 2 ============-->
+                  <!--========= testimonial 2 ============
                         <div class="grid testimonial__item swiper-slide">
-                            <img src="https://unsplash.com/pt-br/fotografias/TzvMJ6G0ink" alt="Robot2" class="testimonial__image">
+                            <img src="https://images.unsplash.com/photo-1553882809-a4f57e59501d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8cGFzdG9yJTIwYWxlbWFvfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60" alt="Pastor Alemão" class="testimonial__image">
                             <div class="testimonial__body">
                                 <div class="testimonial__icon">
                                     <i class="bx bxs-quote-alt-left"></i>
                                 </div>
                                 <p class="testimonial__quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus eos ipsam repellat? Officiis perspiciatis perferendis vero saepe!</p>
-                                <p class="testimonial__name">Robot2</p>
+                                <p class="testimonial__name">Ladybugs</p>
                                 <span class="testimonial__occupation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse qui, porro voluptatem similique eveniet nisi voluptas accusamus molestiae ratione doloremque, fugit illum.</span>
                             </div>
-                        </div>
-                    <!--========= testimonial 3 ============-->
+                        </div>-->
+                    <!--========= testimonial 3 ============
                         <div class="grid testimonial__item swiper-slide">
-                            <img src="https://unsplash.com/pt-br/fotografias/kHqbPFRCmf0" alt="Groot" class="testimonial__image">
+                            <img src="https://images.unsplash.com/photo-1580923368248-877f237696cd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Groot" class="testimonial__image">
                             <div class="testimonial__body">
                                 <div class="testimonial__icon">
                                     <i class="bx bxs-quote-alt-left"></i>
                                 </div>
                                 <p class="testimonial__quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus eos ipsam repellat? Officiis perspiciatis perferendis vero saepe!</p>
-                                <p class="testimonial__name">Groot</p>
+                                <p class="testimonial__name">Pássaro</p>
                                 <span class="testimonial__occupation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse qui, porro voluptatem similique eveniet nisi voluptas accusamus molestiae ratione doloremque, fugit illum.</span>
                             </div>
                         </div>
@@ -330,7 +331,7 @@
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
-        </section>
+        </section>-->
 
         <!--===============  CONTACT SECTION ===============-->
         <section id="contact" class="contact section">
@@ -350,6 +351,7 @@
                                 </span>
                                 (+55) 19997579435
                             </li>
+
                             <li class="contact__item">
                                 <span class="contact__icon">
                                     <i class="bx bx-envelope"></i>
@@ -396,28 +398,28 @@
                 <div class="social">
                     <ul class="social__list">
                         <li class="social__item">
-                            <a href="#" class="social__link">
-                                <i class="bx bxl-github"></i>
+                            <a href="https://github.com/Dev02Zola" class="social__link">
+                                <abbr title="github"><i class="bx bxl-github"></abbr></i>
                             </a>
                         </li>
                         <li class="social__item">
-                            <a href="#" class="social__link">
-                                <i class="bx bxl-dribbble"></i>
+                            <a href="https://youtube.com/zola" class="social__link">
+                                <abbr title="youtube"><i class="bx bxl-youtube"></abbr></i>
                             </a>
                         </li>
                         <li class="social__item">
-                            <a href="#" class="social__link">
-                                <i class="bx bxl-twitter"></i>
+                            <a href="https://twitter.com/zola" class="social__link">
+                                <abbr title="twitter"><i class="bx bxl-twitter"></abbr></i>
                             </a>
                         </li>
                         <li class="social__item">
-                            <a href="#" class="social__link">
-                                <i class="bx bxl-instagram"></i>
+                            <a href="https://instagram.com/zola_z10" class="social__link">
+                                <abbr title="instagram"><i class="bx bxl-instagram"></abbr></i>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <p class="footer__copyright">Animi provident modi nostrum nulla.</p>
+                <p class="footer__copyright">All Rights Reserved <br>Copyright &copy;</p>
             </div>
         </div>
     </footer>
